--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -3,13 +3,17 @@
   <head>
     <%= render "head", metadata: site.metadata, title: resource.data.title %>
   </head>
-  <body class="<%= resource.data.layout %> <%= resource.data.page_class %>">
-    <%= render Shared::Navbar.new(metadata: site.metadata, resource: resource) %>
-
-    <main>
-      <%= yield %>
-    </main>
-
-    <%= render "footer", metadata: site.metadata %>
+  <body class="<%= resource.data.layout %> <%= resource.data.page_class %>flex h-full flex-col bg-zinc-50 dark:bg-black">
+    <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
+      <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
+        <div class="mx-auto max-w-7xl lg:px-8">
+          <%= render Shared::Navbar.new(metadata: site.metadata, resource: resource) %>
+          <main>
+            <%= yield %>
+          </main>
+          <%= render "footer", metadata: site.metadata %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
