--- a/src/_layouts/post.erb
+++ b/src/_layouts/post.erb
@@ -2,6 +2,14 @@
 layout: default
 ---
 
-<h1><%= resource.data.title %></h1>
 
-<%= yield %>
+
+
+<div class="max-w-2xl">
+  <h1 class="text-4xl my-24 font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
+    <%= resource.data.title %>
+  </h1>
+  <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400">
+    <%= yield %>
+  </p>
+</div>
