--- a/src/_partials/_head.erb
+++ b/src/_partials/_head.erb
@@ -7,4 +7,5 @@
 
 <link rel="stylesheet" href="<%= webpack_path :css %>" />
 <script src="<%= webpack_path :js %>" defer></script>
+<script src="https://cdn.tailwindcss.com"></script>
 <%= live_reload_dev_js %>
