creates second draft with a lot of posts

--- a/src/_partials/_footer.erb
+++ b/src/_partials/_footer.erb
@@ -1,4 +1,4 @@
-<footer class="flex flex-row fixed bottom-0 my-8">
+<footer class="flex flex-row fixed bottom-0 right-32 my-8">
   <p class="text-md">
     Get in touch | &nbsp;
   </p>
