add presentations and projects

--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -11,7 +11,13 @@
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/about' %>">About</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/posts' %>">Posts</a>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/posts' %>">Articles</a>
+            </li>
+            <li>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/projects' %>">Projects</a>
+            </li>
+            <li>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/presentations' %>">Speaking</a>
             </li>
           </ul>
         </nav>
