--- a/src/_layouts/presentation.erb
+++ b/src/_layouts/presentation.erb
@@ -12,8 +12,9 @@ layout: default
   </div>
   <div class="lg:pl-20">
     <div class="mt-36 mb-12 max-w-xs px-2.5 lg:max-w-none">
-      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= relative_url '/images/romy_and_steph.jpg' %>" decoding="async" data-nimg="1" class="aspect-square rotate-3 rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
+      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= if resource.data.image_url then resource.data.image_url else relative_url 'images/rubyinhollywood.jpg' end %>" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
     </div>
+
     <%= render "social_media" %>
   </div>
 </div>
