--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -6,7 +6,7 @@ layout: default
     <h1 class="mt-36 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
       <%= resource.data.title %>
     </h1>
-    <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400">
+    <p class="dark:text-slate-400 mt-6 text-base text-zinc-600 dark:text-zinc-400">
       <%= yield %>
     </p>
   </div>
