add newsletter signup

--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -2,10 +2,13 @@
 layout: default
 ---
 <div class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-5xl">
-  <div class="max-w-2xl lg:order-first lg:row-span-2">
-    <h1 class="mt-36 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
+  <div class="">
+    <h1 class="mt-36 text-6xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-6xl">
       <%= resource.data.title %>
     </h1>
+    <p class="text-zinc-800 tracking-tight dark:text-zinc-100 sm:text-3xl">
+      <%= resource.data.subtitle %>
+    </p>
     <p class="dark:text-slate-400 mt-6 text-base text-zinc-600 dark:text-zinc-400">
       <%= yield %>
     </p>
