--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -1,26 +1,22 @@
 <div class="relative px-4 sm:px-8 lg:px-12">
-  <div class="mx-auto max-w-2xl lg:max-w-5xl">
     <div class="relative flex gap-4">
-      <div class="flex flex-1 justify-end md:justify-center">
-        <nav class="pointer-events-auto hidden md:block">
+      <div class="flex flex-1 justify-center">
+        <nav class="pointer-events-auto ">
           <ul class="flex rounded-full bg-white/90 px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
             <li>
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/' %>">Home</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/about' %>">About</a>
-            </li>
-            <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/articles' %>">Articles</a>
-            </li>
-            <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/posts' %>">Blog</a>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/community' %>">Community</a>
             </li>
             <li>
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/projects' %>">Projects</a>
             </li>
             <li>
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/presentations' %>">Speaking</a>
+            </li>
+            <li>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/posts' %>">Blog</a>
             </li>
           </ul>
         </nav>
