--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -6,12 +6,12 @@ layout: default
     <h1 class=" text-6xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-6xl">
       <%= resource.data.title %>
     </h1>
-    <p class="text-zinc-800 tracking-tight dark:text-zinc-100 sm:text-3xl">
+    <p class="text-zinc-800 tracking-tight dark:text-zinc-100 text-3xl mb-8">
       <%= resource.data.subtitle %>
     </p>
-    <p class="dark:text-slate-400 mt-6 text-base text-zinc-600 dark:text-zinc-400">
+    <span class="dark:text-zinc-400 mt-6 text-base text-zinc-600">
       <%= yield %>
-    </p>
+    </span>
   </div>
   <div class="lg:pl-20">
     <div class="mb-12 max-w-2xl lg:visible px-2.5 lg:max-w-none">
