--- a/src/_layouts/presentation.erb
+++ b/src/_layouts/presentation.erb
@@ -3,12 +3,12 @@ layout: default
 ---
 <div class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-5xl">
   <div class="max-w-2xl lg:order-first lg:row-span-2">
-    <h1 class="mt-36 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
+    <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
       <%= resource.data.title %>
     </h1>
-    <p class="dark:text-slate-400 mt-6 text-base text-zinc-600 dark:text-zinc-400">
+    <span class="dark:text-slate-400 mt-6 text-base text-zinc-600">
       <%= yield %>
-    </p>
+    </span>
   </div>
   <div class="lg:pl-20">
     <div class="mt-36 mb-12 max-w-xs px-2.5 lg:max-w-none">
