--- a/src/_layouts/post.erb
+++ b/src/_layouts/post.erb
@@ -4,15 +4,15 @@ layout: default
 
 <div class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-xl lg:max-w-7xl">
   <div class="max-w-2xl lg:order-first lg:row-span-2">
-    <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
+    <h1 class="my-8 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
       <%= resource.data.title %>
     </h1>
-    <span class="dark:text-slate-400 mt-6 text-base text-zinc-600">
+    <span class="dark:text-slate-400 mt-16 text-base text-zinc-600">
       <%= yield %>
     </span>
   </div>
   <div class="lg:pl-20">
-    <div class="mt-36 mb-12 max-w-xs px-2.5 lg:max-w-none">
+    <div class="lg:mt-16 mb-12 max-w-xs px-2.5 lg:max-w-none">
       <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= if resource.data.image_url then resource.data.image_url else relative_url 'images/rubyinhollywood.jpg' end %>" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
     </div>
 
