organize posts page

--- a/src/_layouts/post.erb
+++ b/src/_layouts/post.erb
@@ -7,15 +7,14 @@ layout: default
     <h1 class="my-8 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
       <%= resource.data.title %>
     </h1>
-    <span class="dark:text-slate-400 mt-16 text-base text-zinc-600">
+    <span class="dark:text-slate-400 mt-16 text-zinc-600">
       <%= yield %>
     </span>
   </div>
   <div class="lg:pl-20">
     <div class="lg:mt-16 mb-12 max-w-xs px-2.5 lg:max-w-none">
-      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= if resource.data.image_url then resource.data.image_url else relative_url 'images/rubyinhollywood.jpg' end %>" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
+      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= if resource.data.image_url then relative_url resource.data.image_url else relative_url 'images/headshot.jpg' end %>" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
     </div>
-
     <%= render "social_media" %>
   </div>
 </div>
