--- a/src/_partials/_head.erb
+++ b/src/_partials/_head.erb
@@ -2,6 +2,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <% resource_title = strip_html(strip_newlines(title)) %>
 <title><% if resource_title != "Index" %><%= resource_title %> | <%= metadata.title %><% else %><%= metadata.title %>: <%= metadata.tagline %><% end %></title>
+<meta property="og:title" content="Stephanie A. Wilkinson" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="relative_url 'images/headshot.jpg'" />
 
 <meta name="description" content="<%= metadata.description %>" />
 
