--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="mt-16 grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-7xl">
+<div class="md:mt-16 mt-4 px-8 grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-7xl">
   <div class="">
     <h1 class="text-6xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-6xl">
       <%= resource.data.title %>
@@ -20,3 +20,5 @@ layout: default
     <%= render "social_media" %>
   </div>
 </div>
+
+
