--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -15,7 +15,7 @@ layout: default
   </div>
   <div class="lg:pl-20">
     <div class="mb-12 max-w-2xl lg:visible px-2.5 lg:max-w-none">
-      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= relative_url '/images/headshot.jpg' %>" decoding="async" data-nimg="1" class="aspect-square rotate-3 rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;">
+      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= relative_url '/images/headshot.jpg' %>" decoding="async" data-nimg="1" class="aspect-square rotate-3 rounded-3xl object-cover" loading="lazy" style="color: transparent;">
     </div>
     <%= render "social_media" %>
   </div>
