--- a/src/_layouts/post.erb
+++ b/src/_layouts/post.erb
@@ -13,7 +13,7 @@ layout: default
   </div>
   <div class="lg:pl-20">
     <div class="lg:mt-16 max-w-xs px-4 lg:max-w-none">
-      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= if resource.data.image_url then relative_url resource.data.image_url else relative_url 'images/headshot.jpg' end %>" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
+      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= if resource.data.image_url then relative_url resource.data.image_url else relative_url 'images/headshot.jpg' end %>" decoding="async" data-nimg="1" class="aspect-square rounded-3xl object-cover" loading="lazy" style="color: transparent;" width="800" height="800">
     </div>
     <div class="mt-16">
       <%= render "social_media" %>
