--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -14,11 +14,32 @@ layout: default
     </span>
   </div>
   <div class="lg:pl-20">
-    <div class="mb-12 max-w-2xl lg:visible px-2.5 lg:max-w-none">
+    <div class="mb-12 max-w-2xl px-2.5 lg:max-w-none">
       <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="<%= relative_url '/images/headshot.jpg' %>" decoding="async" data-nimg="1" class="aspect-square rotate-3 rounded-3xl object-cover" loading="lazy" style="color: transparent;">
     </div>
     <%= render "social_media" %>
   </div>
 </div>
-
-
+<div class="place-content-center flex flex-row gap-x-16 my-24">
+  <div class="relative aspect-[10/10] w-44 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:w-72 sm:rounded-2xl -rotate-2">
+  <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/romy_and_steph.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="2400" height="3000">
+  </div>
+  <div class="relative aspect-[10/10] w-44 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:w-72 sm:rounded-2xl rotate-2">
+  <img alt="" sizes="(min-width: 640px) 18rem, 11rem"  src="./images/market-view.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3744" height="5616">
+  </div>
+  <div class="relative aspect-[10/10] w-44 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:w-72 sm:rounded-2xl -rotate-2">
+  <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/railsgirls_presentation.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3936" height="2624">
+  </div>
+  <div class="relative aspect-[10/10] w-44 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:w-72 sm:rounded-2xl rotate-2">
+  <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/conrex.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="5760" height="3840">
+  </div>
+  <div class="relative aspect-[10/10] w-44 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:w-72 sm:rounded-2xl -rotate-2">
+  <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/general_assembly.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3936" height="2624">
+  </div>
+  <div class="relative aspect-[10/10] w-44 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:w-72 sm:rounded-2xl rotate-2">
+  <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/yonderbook.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="5760" height="3840">
+  </div>
+  <div class="relative aspect-[10/10] w-44 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:w-72 sm:rounded-2xl -rotate-2">
+  <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/vanderbilt.jpeg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3936" height="2624">
+  </div>
+</div>
