add links to image banner

--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="md:mt-16 mt-4 px-8 grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-7xl">
+<div class="bg-white/30 dark:bg-transparent md:mt-16 mt-4 px-8 grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-7xl">
   <div class="">
     <h1 class="text-6xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-6xl">
       <%= resource.data.title %>
@@ -24,21 +24,27 @@ layout: default
   <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl -rotate-2">
   <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/romy_and_steph.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="2400" height="3000">
   </div>
-  <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl rotate-2">
-  <img alt="" sizes="(min-width: 640px) 18rem, 11rem"  src="./images/market-view.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3744" height="5616">
-  </div>
+  <a href="projects/market-view">
+    <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl rotate-2">
+    <img alt="" sizes="(min-width: 640px) 18rem, 11rem"  src="./images/market-view.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3744" height="5616">
+    </div>
+  </a>
   <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl -rotate-2">
   <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/railsgirls_presentation.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3936" height="2624">
   </div>
-  <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl rotate-2">
-  <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/conrex.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="5760" height="3840">
-  </div>
+  <a href="projects/conrex">
+    <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl rotate-2">
+    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/conrex.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="5760" height="3840">
+    </div>
+  </a>
   <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl -rotate-2">
   <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/general_assembly.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3936" height="2624">
   </div>
-  <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl rotate-2">
-  <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/yonderbook.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="5760" height="3840">
-  </div>
+  <a href="projects/yonderbook">
+    <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl rotate-2">
+    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/yonderbook.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="5760" height="3840">
+    </div>
+  </a>
   <div class="relative aspect-[10/10] lg:w-28 xl:w-36 2xl:w-48 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:rounded-2xl -rotate-2">
   <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/vanderbilt.jpeg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3936" height="2624">
   </div>
