fix image opengraph tag

--- a/src/_partials/_head.erb
+++ b/src/_partials/_head.erb
@@ -14,7 +14,7 @@
 <title><% if resource_title != "Index" %><%= resource_title %> | <%= metadata.title %><% else %><%= metadata.title %>: <%= metadata.tagline %><% end %></title>
 <meta property="og:title" content="Stephanie A. Wilkinson" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="<%= relative_url 'images/headshot.jpg %>'" />
+<meta property="og:image" content="<%= relative_url 'images/headshot.jpg' %>" />
 
 <meta name="description" content="<%= metadata.description %>" />
 
