--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -10,7 +10,7 @@
               <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/community' %>">Community</a>
             </li>
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/projects' %>">Projects</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/projects' %>">Portfolio</a>
             </li>
             <li>
               <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="<%= relative_url '/presentations' %>">Speaking</a>
