--- a/src/_layouts/post.erb
+++ b/src/_layouts/post.erb
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="flex gap-y-16 md:mx-auto max-w-5xl xl:max-w-7xl">
+<div class="flex md:mx-auto max-w-6xl xl:max-w-7xl">
   <div class="md:my-8 md:w-2/3 w-full p-4">
     <h1 class="text-5xl mb-8 md:mt-8 font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
       <%= resource.data.title %>
