--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -22,37 +22,48 @@ layout: default
 </div>
 <div class="place-content-center flex flex-row md:gap-x-4 lg:gap-x-8 my-24">
   <a href="projects/market-view">
-    <div class="drop-shadow-lg relative aspect-[10/10] lg:w-60 xl:w-72 2xl:w-80  overflow-hidden rounded-xl rotate-2">
-      <img alt="NAIS Market View" sizes="(min-width: 640px) 18rem, 11rem"  src="./images/market-view.png" decoding="async" data-nimg="1" class="drop-shadow-lg absolute inset-0 h-full w-full " loading="lazy"  width="3744" height="5616">
+    <div class="hover:shadow-slate-900/90 shadow-xl relative aspect-[10/10] w-20 lg:max-w-28 xl:w-32 2xl:max-w-52  overflow-hidden rounded-xl hover:-rotate-2 rotate-2">
+      <img alt="NAIS Market View" sizes="(min-width: 640px) 18rem, 11rem"  src="./images/market-view.png" decoding="async" data-nimg="1" class="drop-shadow-lg absolute inset-0 h-full w-full" loading="lazy">
     </div>
   </a>
   <a href="projects/conrex">
-    <div class="drop-shadow-xl relative aspect-[10/10] lg:w-60 xl:w-72 2xl:w-80 overflow-hidden rounded-xl -rotate-2">
-      <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/conrex.webp" decoding="async" data-nimg="1" class="drop-shadow-xl absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="5760" height="3840">
+    <div class="hover:shadow-slate-900/90 shadow-xl relative aspect-[10/10] w-20 lg:max-w-28 xl:w-32 2xl:max-w-52 overflow-hidden rounded-xl hover:rotate-2 -rotate-2">
+      <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/conrex.webp" decoding="async" data-nimg="1" class="drop-shadow-xl absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent">
     </div>
   </a>
   <a href="projects/yonderbook">
-    <div class="drop-shadow-md relative aspect-[10/10] lg:w-60 xl:w-72 2xl:w-80 overflow-hidden rounded-xl rotate-2">
-      <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/yonderbook.png" decoding="async" data-nimg="1" class="drop-shadow-md absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="5760" height="3840">
+    <div class="hover:shadow-slate-900/90 shadow-xl relative aspect-[10/10] w-20 lg:max-w-28 xl:w-32 2xl:max-w-52 overflow-hidden rounded-xl hover:-rotate-2 rotate-2">
+      <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/yonderbook.png" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent">
     </div>
   </a>
-    <a href="projects/event-view">
-    <div class="drop-shadow relative aspect-[10/10] lg:w-60 xl:w-72 2xl:w-80 overflow-hidden rounded-xl -rotate-2">
-      <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/event_view.webp" decoding="async" data-nimg="1" class="drop-shadow absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="5760" height="3840">
+  <a href="projects/event-view">
+    <div class="hover:shadow-slate-900/90 shadow-xl relative aspect-[10/10] w-20 lg:max-w-28 xl:w-32 2xl:max-w-52 overflow-hidden rounded-xl hover:rotate-2 -rotate-2">
+      <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/event_view.webp" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent">
     </div>
   </a>
-</div>
-<div class="place-content-center flex flex-row md:gap-x-4 lg:gap-x-8 my-24">
-  <div class="relative aspect-[10/10] lg:w-60 xl:w-72 2xl:w-80 overflow-hidden rounded-xl -rotate-2">
-    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/romy_and_steph.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="2400" height="3000">
+  <a href="projects/tectonic_plates">
+    <div class="hover:shadow-slate-900/90 shadow-xl relative aspect-[10/10] w-20 lg:max-w-28 xl:w-32 2xl:max-w-52 overflow-hidden rounded-xl hover:-rotate-2 rotate-2">
+      <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/tectonic_plates.webp" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent">
+    </div>
+  </a>
+  <span>
+  <div class="relative aspect-[10/10] w-20 lg:max-w-28 xl:w-32 2xl:max-w-52 overflow-hidden rounded-xl -rotate-2">
+    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/romy_and_steph.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent">
   </div>
-  <div class="relative aspect-[10/10] lg:w-60 xl:w-72 2xl:w-80 overflow-hidden rounded-xl rotate-2">
-    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/railsgirls_presentation.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3936" height="2624">
+  </span>
+  <span>
+  <div class="relative aspect-[10/10] w-20 lg:max-w-28 xl:w-32 2xl:max-w-52 overflow-hidden rounded-xl rotate-2">
+    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/railsgirls_presentation.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent">
   </div>
-  <div class="relative aspect-[10/10] lg:w-60 xl:w-72 2xl:w-80 overflow-hidden rounded-xl -rotate-2">
-    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/general_assembly.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3936" height="2624">
+  </span>
+  <span>
+  <div class="relative aspect-[10/10] w-20 lg:max-w-28 xl:w-32 2xl:max-w-52 overflow-hidden rounded-xl -rotate-2">
+    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/general_assembly.jpg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent">
   </div>
-  <div class="relative aspect-[10/10] lg:w-60 xl:w-72 2xl:w-80 overflow-hidden rounded-xl rotate-2">
-    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/vanderbilt.jpeg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent" width="3936" height="2624">
+  </span>
+  <span>
+  <div class="relative aspect-[10/10] w-20 lg:max-w-28 xl:w-32 2xl:max-w-52 overflow-hidden rounded-xl rotate-2">
+    <img alt="" sizes="(min-width: 640px) 18rem, 11rem" src="./images/vanderbilt.jpeg" decoding="async" data-nimg="1" class="absolute inset-0 h-full w-full object-cover" loading="lazy" style="color:transparent">
   </div>
+</span>
 </div>
