--- a/src/_layouts/full_width.erb
+++ b/src/_layouts/full_width.erb
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="mx-auto max-w-2xl lg:max-w-7xl">
-  <h1 class="md:mt-16 m-4 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
+  <h1 class="md:mt-16 m-4 text-zinc-800 dark:text-zinc-100">
     <%= resource.data.title %>
   </h1>
   <div class="m-4 dark:text-slate-400 text-base text-zinc-600 space-y-4">
