add logo for dark mode

--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -2,9 +2,12 @@
   <div class="mx-auto max-w-7xl">
     <div class="relative flex h-16 justify-between">
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="w-fit invisible sm:visible flex flex-shrink-0 items-center">
-            <a href="/" class="">
-                <img class="h-20 w-full" src="/images/stephanie_wilkinson.svg" alt="Your Company">
+        <div class="invisible sm:visible flex flex-shrink-0 items-center">
+            <a href="/" class="visible dark:collapse">
+                <img class="h-20 w-full" src="/images/stephanie_wilkinson.svg" alt="Stephanie Wilkinson">
+            </a>
+            <a href="/" class="collapse dark:visible w-full">
+                <img class="" src="/images/stephanie_wilkinson_dark.svg" alt="Stephanie Wilkinson">
             </a>
         </div>
       </div>
