--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -1,8 +1,8 @@
-<nav class="">
+<nav class="mb-24 md:mb-0">
   <div class="mx-auto max-w-7xl">
-    <div class="relative flex h-16 justify-between">
-      <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="invisible w-5/6 sm:visible flex flex-shrink-0 items-center">
+    <div class="md:relative md:flex h-16 justify-between">
+        <div class="flex flex-1  md:items-stretch md:justify-start">
+            <div class="invisible w-5/6 md:visible flex flex-shrink-0 items-center">
             <a href="/" class="visible dark:collapse">
                 <img class="h-20 w-full" src="/images/stephanie_wilkinson.svg" alt="Stephanie Wilkinson">
             </a>
@@ -11,7 +11,7 @@
             </a>
         </div>
       </div>
-      <div class="sm:ml-6 text-xs md:text-lg sm:flex sm:space-x-8">
+      <div class="text-sm md:text-lg md:space-x-4 mt-3">
         <a href="<%= relative_url '/projects' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Projects</a>
         <a href="<%= relative_url '/community' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Community Work</a>
         <a href="<%= relative_url '/presentations' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Presentations</a>
