--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -1,22 +1,14 @@
-<nav class="mb-24 md:mb-0">
+<nav class="md:mb-16">
   <div class="mx-auto max-w-7xl">
     <div class="md:relative md:flex h-16 justify-between">
-        <div class="flex flex-1  md:items-stretch md:justify-start">
-            <div class="invisible w-5/6 md:visible flex flex-shrink-0 items-center">
-            <a href="/" class="visible dark:collapse">
-                <img class="h-20 w-full" src="/images/stephanie_wilkinson.svg" alt="Stephanie Wilkinson">
-            </a>
-            <a href="/" class="collapse dark:visible w-full">
-                <img class="" src="/images/stephanie_wilkinson_dark.svg" alt="Stephanie Wilkinson">
-            </a>
+        <div class="flex text-xl md:text-2xl lg:text-4xl flex-1 md:items-stretch md:justify-start tracking-tight text-zinc-800 dark:text-zinc-100">
+            <a href="/" class="">Stephanie Wilkinson</a>
         </div>
-      </div>
-      <div class="text-sm md:text-lg md:space-x-4 mt-3">
-        <a href="<%= relative_url '/projects' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Projects</a>
-        <a href="<%= relative_url '/community' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Community Work</a>
-        <a href="<%= relative_url '/presentations' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Presentations</a>
-        <a href="<%= relative_url '/posts' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Blog</a>
+        <div class="text-sm md:text-lg md:space-x-4 lg:mt-1">
+            <a href="<%= relative_url '/projects' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Projects</a>
+            <a href="<%= relative_url '/community' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Community Work</a>
+            <a href="<%= relative_url '/presentations' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Presentations</a>
+            <a href="<%= relative_url '/posts' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Blog</a>
       </div>
     </div>
-  </div>
 </nav>
