--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,24 +1,7 @@
-body {
-    font-family: "Lora";
-}
-
-h1 {
-    font-family: "Lato";
-    font-size: 4rem !important;
-}
-h2 {
-    font-family: "Lato";
-    font-size: 3em !important;
-}
-h3 {
-    font-family: "Lato";
-    font-size: 2em !important;
+html {
+    font-family: "Plus Jakarta Sans" !important;
 }
 
 a {
     cursor: pointer !important;
-}
-
-a:hover {
-    text-decoration: underline !important;
 }
