--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -1,14 +1,14 @@
-<nav class="md:mb-16">
+<nav class="sm:mb-16">
   <div class="mx-auto max-w-7xl">
-    <div class="md:relative md:flex h-16 justify-between">
-        <div class="flex text-xl md:text-2xl lg:text-4xl flex-1 md:items-stretch md:justify-start tracking-tight text-zinc-800 dark:text-zinc-100">
+      <div class="sm:relative sm:flex h-16 justify-between">
+          <div class="flex text-xl sm:text-2xl lg:text-4xl flex-1 sm:items-stretch sm:justify-start tracking-tight text-zinc-800 dark:text-zinc-100">
             <a href="/" class="">Stephanie Wilkinson</a>
         </div>
-        <div class="text-sm md:text-lg md:space-x-4 lg:mt-1">
-            <a href="<%= relative_url '/projects' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Projects</a>
-            <a href="<%= relative_url '/community' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Community Work</a>
-            <a href="<%= relative_url '/presentations' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Presentations</a>
-            <a href="<%= relative_url '/posts' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Blog</a>
+        <div class="text-sm sm:text-lg sm:space-x-4 lg:mt-1">
+            <a href="<%= relative_url '/projects' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Work</a>
+            <a href="<%= relative_url '/community' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Community</a>
+            <a href="<%= relative_url '/presentations' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Presentations</a>
+            <a href="<%= relative_url '/posts' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Blog</a>
       </div>
     </div>
 </nav>
